2014-02-25  Olaf Bergmann  <bergmann@tzi.org>

	* net.c (coap_cancel): Handling of 7.31 responses to cancel
	notifications (see Section 4.6 of draft-ietf-core-observe-12)

2014-02-04  Olaf Bergmann  <bergmann@tzi.org>

	* resource.c (coap_print_link): This function now takes an offset
	where printing starts. This is used for generating blocks on the
	fly.

	* net.c (wellknown_response): Added support for Block2 options
	when generating a response for .well-known/core.

	* block.h (coap_opt_block_num): Fixed handling of zero-length
	options. COAP_OPT_BLOCK_LAST now returns NULL when the option
	value's length is zero.

2014-01-07  Olaf Bergmann  <bergmann@tzi.org>

	* resource.c (coap_print_link): Output partial resource
	descriptions. The function now provides a sliding window over the
	textual representation of the resource. Output starts at the given
	offset and ends at the buffer's upper bound. The meaning of the
	return value has changed to allow distinguishing whether or not
	the resource description has been truncated at the buffer's upper
	bound.
	(print_wellknown): Support for the new coap_print_link(). An
	additional parameter now is used to provide the offset into the
	resource description. The meaning of the return value has been
	adjusted accordingly.

2013-12-23  Olaf Bergmann  <bergmann@tzi.org>

	* configure.in: merged with LWIP port from chrysn
	<https://git.gitorious.org/coap-lwip/coap-lwip.git>. This
	introduces new compiler flags WITH_POSIX and WITH_LWIP to
	distinguish target platforms.

2013-09-03  Olaf Bergmann  <bergmann@tzi.org>

	* option.h (coap_option_setb): increased size of option type
	argument

	* tests/test_error_response.c (t_init_error_response_tests): new
	tests for error response generation

	* tests/test_pdu.c (t_encode_pdu5): fixed number for option Accept

	* net.c (coap_new_error_response): fixed option size calculation

2013-07-04  Olaf Bergmann  <bergmann@tzi.org>
